优化自定义袭击数据包格式